package org.example.bank.strategy;

public interface FeeStrategy {
    double calculateFee(double amount);
}